<pre>
2007-05-02:
	* version ???
	* :tabmove command (by Doug Kearns)
	* 'showstatuslinks' option to control where/if we show the destination of
	a hovered link
	* :version! shows firefox version page
	* hovered links appear in the command line again, not statusbar
	* :help now opens in the current tab even for xhtml pages like "about:"
	* hints work on xhtml pages now (you need to reset the 'hinttags' and
	  'extendedhinttags' settings with :set hinttags& and :set extendedhinttags&
	* :set option& resets the option to the default value
	* added :tabonly and :tabrewind and :tablast commands and some futher aliases :tabNext, etc. (by Doug Kearns)
	* added vimparator.vim for .vimperatorrc syntax highlighting in the XPI (by Doug Kearns)
	* Added keyword support for bookmarks to the :[tab]open commands
	* many small bug fixes and enhancements

2007-05-02:
	* version 0.4.1
	* Fixed bug that :open google.com/mail opened ".com/mail" in google search
	* made <tab> <up> <down> etc. perform the default action, so menus kinda
	work, and it doesn't beep anymore on tab.
	* added 'defsearch' setting for setting default search engine

2007-05-01:
	* version 0.4
	* extension GUID was changed to 'vimperator@mozdev.net' -> YOU WILL HAVE
	  TO UNINSTALL ANY OLD VIMPERATOR INSTALLATION BEFORE INSTALLING THIS VERSION
	* support for internal search engines was dropped. Now we use Firefox search engines
	* support for 'wildmode' completion setting with support for matching the
	  longest common substring. Also new 'wildoptions' setting
	* added 'f' to the 'complete' option to allow listing of filenames in :open prompt
	* changed regexp search to normal text search for completion -> massive speedup, but limited functionality
	* support for :open ./ , :open .. and :open ... (patch from Lee Hinman)
	  'gu' and <BackSpace> goes up a directory component, gU and <C-BackSpace> to the root directory 
	* Esc now doesn't stop loading the webpage, use Ctrl-c instead, :stop command added